--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,12 +6,14 @@ export(idove)
 export(intCens)
 import(Rcpp)
 import(methods)
+importFrom(grDevices,dev.new)
 importFrom(graphics,axis)
 importFrom(graphics,legend)
 importFrom(graphics,lines)
+importFrom(graphics,par)
 importFrom(graphics,plot)
-importFrom(graphics,plot.new)
-importFrom(stats,complete.cases)
+importFrom(stats,model.frame)
+importFrom(stats,model.matrix)
 importFrom(stats,model.response)
 importFrom(stats,pnorm)
 importFrom(stats,sd)
